Convert rest of files to typescript

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "idletcg",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
