--- a/.github/workflows/github-actions-publish.yml
+++ b/.github/workflows/github-actions-publish.yml
@@ -37,6 +37,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 8
+          run_install: true
       - name: Build
         run: pnpm build
       - name: Setup Pages
