--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "deepmerge-ts": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "valtio": "^1.12.0"
