--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@antimatter-dimensions/notations": "^3.2.0",
     "deepmerge-ts": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
